9562 Fixed small hover gap in nav

--- a/src-built-in/components/appLauncher2/style.css
+++ b/src-built-in/components/appLauncher2/style.css
@@ -150,7 +150,7 @@ img {
 }
 
 .complex-menu-section-toggle {
-    padding: 5px 12px 5px 0px;
+    padding: 5px 13px 5px 0px;
     padding-left: 10px;
     display: flex;
     align-items: center;
